build/k8s/templates/km4fpa-com-www-redirect.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: km4fpa-com-www-redirect
  labels:
    project: km4fpa-com
spec:
  selector:
    matchLabels:
      project: km4fpa-com
      app: km4fpa-com-www-redirect
  replicas: 1
  template:
    metadata:
      labels:
        project: km4fpa-com
        app: km4fpa-com-www-redirect
    spec:
      containers:
      - name: km4fpa-com-www-redirect
        image: schmunk42/nginx-redirect:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
