build/k8s/templates/km4fpa-com.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: km4fpa-com
  labels:
    app: km4fpa-com
    project: km4fpa-com
spec:
  selector:
    matchLabels:
      app: km4fpa-com
      project: km4fpa-com
  replicas: 1
  template:
    metadata:
      name: km4fpa-com
      labels:
        app: km4fpa-com
        project: km4fpa-com
    spec:
      containers:
      - name: km4fpa-com
        image: kevashcraft/km4fpa-com
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
