build/k8s/templates/km4fpa-com-www-redirect.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: km4fpa-com-www-redirect
  labels:
    project: km4fpa-com
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: km4fpa-com-www-redirect
