build/k8s/templates/km4fpa-com.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: km4fpa-com
  labels:
    app: km4fpa-com
    project: km4fpa-com
spec:
  selector:
    app: km4fpa-com
    project: km4fpa-com
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
